# sakuin

./: pyproject.toml  setup.cfg
sakuin/: sakuin.db  tables.py  test.py
